--- a/ParseKadrovayaSpravka.csproj
+++ b/ParseKadrovayaSpravka.csproj
@@ -106,7 +106,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="ParseTeacherInfo.cs" />
+    <Compile Include="ParseInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
