--- a/packages.config
+++ b/packages.config
@@ -3,17 +3,25 @@
   <package id="ClosedXML" version="0.100.3" targetFramework="net472" />
   <package id="DocumentFormat.OpenXml" version="2.16.0" targetFramework="net472" />
   <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.21.9" targetFramework="net472" />
   <package id="Irony.NetCore" version="1.0.11" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4" version="1.3.5" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.3.5" targetFramework="net472" />
+  <package id="K4os.Hash.xxHash" version="1.0.8" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="MySql.Data" version="8.0.33" targetFramework="net472" />
+  <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net472" />
   <package id="SixLabors.Fonts" version="1.0.0-beta19" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Packaging" version="6.0.0" targetFramework="net472" />
+  <package id="System.IO.Pipelines" version="5.0.2" targetFramework="net472" />
   <package id="System.IO.UnmanagedMemoryStream" version="4.3.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="XLParser" version="1.5.2" targetFramework="net472" />
