--- a/packages.config
+++ b/packages.config
@@ -10,6 +10,7 @@
   <package id="K4os.Hash.xxHash" version="1.0.8" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="MySql.Data" version="8.0.33" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net472" />
   <package id="SixLabors.Fonts" version="1.0.0-beta19" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
