--- a/ParseKadrovayaSpravka.csproj
+++ b/ParseKadrovayaSpravka.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Aspose.Cells, Version=23.7.0.0, Culture=neutral, PublicKeyToken=716fcc553a201e56, processorArchitecture=MSIL">
+      <HintPath>packages\Aspose.Cells.23.7.0\lib\net40\Aspose.Cells.dll</HintPath>
+    </Reference>
     <Reference Include="BouncyCastle.Crypto, Version=1.9.0.0, Culture=neutral, PublicKeyToken=0e99375e54769942, processorArchitecture=MSIL">
       <HintPath>packages\Portable.BouncyCastle.1.9.0\lib\net40\BouncyCastle.Crypto.dll</HintPath>
     </Reference>
@@ -132,6 +135,8 @@
     <Compile Include="ConnectXMLfile.cs" />
     <Compile Include="DBMySQLUtils.cs" />
     <Compile Include="DBUtils.cs" />
+    <Compile Include="InsertEmpl_load.cs" />
+    <Compile Include="InsertReferenceTables.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -146,7 +151,12 @@
     <Compile Include="models\Edu_semester.cs" />
     <Compile Include="models\Employee.cs" />
     <Compile Include="models\Empl_load.cs" />
+    <Compile Include="models\Group.cs" />
     <Compile Include="models\Load.cs" />
+    <Compile Include="models\Load_temp.cs" />
+    <Compile Include="models\Semester.cs" />
+    <Compile Include="models\Speciality.cs" />
+    <Compile Include="models\Subject.cs" />
     <Compile Include="ParseInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
