--- a/ParseKadrovayaSpravka.csproj
+++ b/ParseKadrovayaSpravka.csproj
@@ -135,6 +135,12 @@
     <Compile Include="ConnectXMLfile.cs" />
     <Compile Include="DBMySQLUtils.cs" />
     <Compile Include="DBUtils.cs" />
+    <Compile Include="FormSelectionFile.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormSelectionFile.Designer.cs">
+      <DependentUpon>FormSelectionFile.cs</DependentUpon>
+    </Compile>
     <Compile Include="InsertEmpl_load.cs" />
     <Compile Include="InsertReferenceTables.cs" />
     <Compile Include="MainForm.cs">
@@ -164,6 +170,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MySqlFunctions.cs" />
     <Compile Include="Справочные данные\ReferenceData.cs" />
+    <EmbeddedResource Include="FormSelectionFile.resx">
+      <DependentUpon>FormSelectionFile.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -176,6 +185,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="files\~%24нагрузкановая.xlsx" />
     <None Include="files\Кадровая справка %281%29.xlsx" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
